--- a/MasterThesis/chapter3.tex
+++ b/MasterThesis/chapter3.tex
@@ -13,8 +13,8 @@ The following requirements would be addressed by the DALICC framework:\\
 	It is difficult to be sure the meaning of the different terms in semantics is aligned. These problems result from indicating the classes, instances, and properties which can not be handled just by mapping.\\
 	This is where DALICC comes to play and helps the user with a workflow that defines the usage context, then gathers additional information to detect conflicts and ambiguous concepts. Based on this information, DALICC makes reasoning over the set of licenses and infers the instruction to the user on how to process with license processing.\\
 	\item \textit{Legal validity of representations and machine recommendations:} \\
-	According to Anna Fensel et al.\cite{Anna}, The semantic complexity of licensing issues means that the semantics of RELs must be aligned within the specific application scenario. This includes a correct interpretation of the various national legislation according to the country of origin of a jurisdiction (i.e. German Urheberrecht vs. US copyright), the resolution of problems that are derived from multilingual, and the consideration of existing case law in the resolution of licensing conflicts.\cite{Anna}\\
-	To solve this problem, DALICC will check the legal validity of machine-readable licenses and the compatibility of reasoning engine output with the law. DALICC output will be tested against the law and checked the semantic precision derived from different languages and adjusted them\cite{Anna}.
+	According to Anna Fensel et al.\cite{Anna}, The semantic complexity of licensing issues means that the semantics of RELs must be aligned within the specific application scenario. This includes a correct interpretation of the various national legislation according to the country of origin of a jurisdiction (i.e. German Urheberrecht vs. US copyright), the resolution of problems that are derived from multilingual, and the consideration of existing case law in the resolution of licensing conflicts \cite{Anna}.\\
+	To solve this problem, DALICC will check the legal validity of machine-readable licenses and the compatibility of reasoning engine output with the law. DALICC output will be tested against the law and checked the semantic precision derived from different languages and adjusted them \cite{Anna}.
 	
 \end{itemize}
 \subsection{DALICC Software Architecture}
