--- a/MasterThesis/introduction.tex
+++ b/MasterThesis/introduction.tex
@@ -5,9 +5,9 @@ A smart contract is a code written in a solidity program language, stored in blo
 As blockchain has been widely used in diverse forms of data, the need of making queries over data, and index entries, become more important. The most important thing is integrating stored data on the blockchain with external resources, in other words, there is a need for linked data \cite{Third}. \\
 According to Tim-Berners-Lee (creator of the World Wide Web), 'linked data is the semantic web done right, and the web done right'\cite{Hector}. 
  The semantic web is a set of standards that enable access, integration, and query on data sources, and creates a variety of insight between different application domains. It uses ontology which represents Ethereum entities like blocks, and transactions to allow queries from the web using SPARQL and linking datasets \cite{Third}. \\
-In this thesis, we deal with some problems: First one is to find a method to integrate semantic licenses from the DAL ICC library into a smart contract. 
+In this thesis, we deal with some problems: First one is to find a method to integrate semantic licenses from the DALICC library into a smart contract. 
 DALICC stands for Data Licenses Clearance Center is a framework that supports automated clearance of rights to help detect license conflict and reduce the cost of high transactions related to manual clearance of licensing contents.
 It is developed and integrated into different functionalities that allow the automated clearance of rights issues \cite{Anna}.\\
-The second one is that licenses from DALICC are already connected to the blockchain, But it does not have a semantic representation of the records themselves. That's why, we used EthOn ontology to generate a semantic model, mapping this model with information retrieved from deployed smart contracts in RDF format. 
-To address this problem in our thesis, we built up DApp to deploy smart contracts in the presence of semantic licenses from DALICC, attaching licenses to contents, then applying semantic web techniques to link extracted data from Ethereum transactions to semantic concepts adapted from Ethon ontology. \\
-In the first chapter, we described distributed ledger technology, blockchain, Ethereum, and some more details to have a better insight into the used technology. In the next chapter, we represented some works around how the semantic web can apply to blockchain. And on the last chapter, we presented DApp to show smart contract integration with the DALICC semantic licenses library and identify this deployment.
+The second one is that licenses from DALICC are already connected to the blockchain, But it does not have a semantic representation of the records themselves. That's why, we used EthOn ontology to generate a semantic model, mapping this model with information retrieved from deployed smart contracts in RDF format. \\
+To address these issues in our thesis, we built up DApp to attach licenses to contents, then apply semantic web techniques linking extracted data from Ethereum transactions to related EthOn ontology concepts. \\
+In the first chapter, we described distributed ledger technology, blockchain, Ethereum, and some more details to have a better insight into the used technology. In the next chapter, we represented some works around how the semantic web can be applied to the blockchain. And on the last chapter, we presented DApp to show smart contract integration with the DALICC semantic licenses library and semantic representation of this deployment.
